# python-devtools

./: .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  HISTORY.md  HISTORY.rst  Makefile  README.md  README.rst  demo.py  dev-requirements.txt  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: set_version.py
.github/workflows/: ci.yml
devtools/: __init__.py  __main__.py  ansi.py  debug.py  highlight.py  prettier.py  pytest_plugin.py  timer.py  utils.py  version.py
docs/: Makefile  conf.py  gen_html.py  history.md  index.md  index.rst  install.md  plugins.py  requirements.txt  usage.md
docs/_templates/: layout.html
docs/examples/: 2_input.py  ansi_colours.py  complex.py  ex1.py  ex2.py  example.py  example1.py  example2.py  more_debug.py  other.py  prettier.py  return_args.py  sitecustomize.py
docs/theme/: customization.css
requirements/: docs.in  docs.txt  linting.in  linting.txt  pyproject.txt  testing.in  testing.txt
tests/: check_tag.py  conftest.py  requirements-linting.txt  requirements.txt  test_ansi.py  test_custom_pretty.py  test_expr_render.py  test_insert_assert.py  test_insert_pytest_raises.py  test_main.nt  test_main.py  test_prettier.py  test_timer.py  test_utils.py  utils.py
